--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+
+
+	<!-- Favicon (Ícone da Aba) -->
+    <link rel="icon" type="image/png" href="logoDica.png">
+
     <style>
         :root { --primary: #f97316; --primary-dark: #ea580c; }
         html, body { height: 100%; overflow: hidden; background-color: #f3f4f6; }
