--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 <body class="text-gray-800">
 
- <div class="fixed top-0 left-0 right-0 z-50 w-full text-center py-4 bg-gray-800 shadow-lg text-white">  
+ <div class="top-0 left-0 right-0 z-50 w-full text-center py-4 bg-gray-800 shadow-lg text-white">  
         <p class="text-sm flex justify-center items-center gap-4">  
           Desenvolvido por Giovanni Fuentes Giannetti:   
           <!-- Instagram -->  
