--- a/index.html
+++ b/index.html
@@ -247,8 +247,70 @@
 {word: "Embaixador", theme: "Profissões"}, {word: "Prefeito", theme: "Profissões"}, {word: "Senador", theme: "Profissões"}, {word: "Deputado", theme: "Profissões"}, {word: "Vereador", theme: "Profissões"},
             
             // Ações (Verbos)
-            {word: "Correr", theme: "Ações"}, {word: "Pular", theme: "Ações"}, {word: "Nadar", theme: "Ações"}, {word: "Voar", theme: "Ações"}, {word: "Dormir", theme: "Ações"}, {word: "Acordar", theme: "Ações"}, {word: "Comer", theme: "Ações"}, {word: "Beber", theme: "Ações"}, {word: "Falar", theme: "Ações"}, {word: "Ouvir", theme: "Ações"}, {word: "Ver", theme: "Ações"}, {word: "Cheirar", theme: "Ações"}, {word: "Tocar", theme: "Ações"}, {word: "Sentir", theme: "Ações"}, {word: "Pensar", theme: "Ações"}, {word: "Escrever", theme: "Ações"}, {word: "Ler", theme: "Ações"}, {word: "Desenhar", theme: "Ações"}, {word: "Pintar", theme: "Ações"}, {word: "Cantar", theme: "Ações"}, {word: "Dançar", theme: "Ações"}, {word: "Jogar", theme: "Ações"}, {word: "Trabalhar", theme: "Ações"}, {word: "Estudar", theme: "Ações"}, {word: "Viajar", theme: "Ações"}, {word: "Cozinhar", theme: "Ações"}, {word: "Limpar", theme: "Ações"}, {word: "Construir", theme: "Ações"}, {word: "Destruir", theme: "Ações"}, {word: "Chorar", theme: "Ações"},
-            
+            //{word: "Correr", theme: "Ações"}, {word: "Pular", theme: "Ações"}, {word: "Nadar", theme: "Ações"}, {word: "Voar", theme: "Ações"}, {word: "Dormir", theme: "Ações"}, {word: "Acordar", theme: "Ações"}, {word: "Comer", theme: "Ações"}, {word: "Beber", theme: "Ações"}, {word: "Falar", theme: "Ações"}, {word: "Ouvir", theme: "Ações"}, {word: "Ver", theme: "Ações"}, {word: "Cheirar", theme: "Ações"}, {word: "Tocar", theme: "Ações"}, {word: "Sentir", theme: "Ações"}, {word: "Pensar", theme: "Ações"}, {word: "Escrever", theme: "Ações"}, {word: "Ler", theme: "Ações"}, {word: "Desenhar", theme: "Ações"}, {word: "Pintar", theme: "Ações"}, {word: "Cantar", theme: "Ações"}, {word: "Dançar", theme: "Ações"}, {word: "Jogar", theme: "Ações"}, {word: "Trabalhar", theme: "Ações"}, {word: "Estudar", theme: "Ações"}, {word: "Viajar", theme: "Ações"}, {word: "Cozinhar", theme: "Ações"}, {word: "Limpar", theme: "Ações"}, {word: "Construir", theme: "Ações"}, {word: "Destruir", theme: "Ações"}, {word: "Chorar", theme: "Ações"},
+            {word: “Presente”, theme: “Ações”},
+{word: “Árvore”, theme: “Ações”},
+{word: “Neve”, theme: “Ações”},
+{word: “Sino”, theme: “Ações”},
+{word: “Luz”, theme: “Ações”},
+{word: “Estrela”, theme: “Ações”},
+{word: “Guirlanda”, theme: “Ações”},
+{word: “Vela”, theme: “Ações”},
+{word: “Ceia”, theme: “Ações”},
+{word: “Festa”, theme: “Ações”},
+{word: “Noite”, theme: “Ações”},
+{word: “Paz”, theme: “Ações”},
+{word: “Amor”, theme: “Ações”},
+{word: “Alegria”, theme: “Ações”},
+{word: “Esperança”, theme: “Ações”},
+{word: “União”, theme: “Ações”},
+{word: “Família”, theme: “Ações”},
+{word: “Mesa”, theme: “Ações”},
+{word: “Doce”, theme: “Ações”},
+{word: “Bolo”, theme: “Ações”},
+{word: “Rabanada”, theme: “Ações”},
+{word: “Panetone”, theme: “Ações”},
+{word: “Vinho”, theme: “Ações”},
+{word: “Brinde”, theme: “Ações”},
+{word: “Abraço”, theme: “Ações”},
+{word: “Sorriso”, theme: “Ações”},
+{word: “Canção”, theme: “Ações”},
+{word: “Coral”, theme: “Ações”},
+{word: “Cartão”, theme: “Ações”},
+{word: “Mensagem”, theme: “Ações”},
+{word: “Laço”, theme: “Ações”},
+{word: “Papel”, theme: “Ações”},
+{word: “Caixa”, theme: “Ações”},
+{word: “Enfeite”, theme: “Ações”},
+{word: “Bola”, theme: “Ações”},
+{word: “Dourado”, theme: “Ações”},
+{word: “Vermelho”, theme: “Ações”},
+{word: “Verde”, theme: “Ações”},
+{word: “Branco”, theme: “Ações”},
+{word: “Prata”, theme: “Ações”},
+{word: “Frio”, theme: “Ações”},
+{word: “Inverno”, theme: “Ações”},
+{word: “Aconchego”, theme: “Ações”},
+{word: “Calor”, theme: “Ações”},
+{word: “Tradição”, theme: “Ações”},
+{word: “Fé”, theme: “Ações”},
+{word: “Lembrança”, theme: “Ações”},
+{word: “Surpresa”, theme: “Ações”},
+{word: “Carinho”, theme: “Ações”},
+{word: “Bondade”, theme: “Ações”},
+{word: “Generosidade”, theme: “Ações”},
+{word: “Solidariedade”, theme: “Ações”},
+{word: “Renovação”, theme: “Ações”},
+{word: “Promessa”, theme: “Ações”},
+{word: “Silêncio”, theme: “Ações”},
+{word: “Luar”, theme: “Ações”},
+{word: “Brilho”, theme: “Ações”},
+{word: “Magia”, theme: “Ações”},
+{word: “Encanto”, theme: “Ações”},
+{word: “Sonho”, theme: “Ações”},
+{word: “Desejo”, theme: “Ações”},
+{word: “Gratidão”, theme: “Ações”},
+{word: “Celebração”, theme: “Ações”},
             // Lugares
             {word: "Praia", theme: "Lugares"}, {word: "Montanha", theme: "Lugares"}, {word: "Floresta", theme: "Lugares"}, {word: "Deserto", theme: "Lugares"}, {word: "Cidade", theme: "Lugares"}, 
 {word: "Biblioteca", theme: "Lugares"}, {word: "Museu", theme: "Lugares"}, {word: "Hospital", theme: "Lugares"}, {word: "Escola", theme: "Lugares"}, {word: "Parque", theme: "Lugares"}, 
