Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -220,9 +220,62 @@
 //{word: "Fivela", theme: "Objetos"}, {word: "Frasco", theme: "Objetos"}, {word: "Funil", theme: "Objetos"}, {word: "Garrafa", theme: "Objetos"}, {word: "Grade", theme: "Objetos"}, {word: "Imã", theme: "Objetos"}, {word: "Lacre", theme: "Objetos"}, {word: "Lata", theme: "Objetos"}, {word: "Molde", theme: "Objetos"}, {word: "Mola", theme: "Objetos"},
 //{word: "Navalha", theme: "Objetos"}, {word: "Painel", theme: "Objetos"}, {word: "Paleta", theme: "Objetos"}, {word: "Pano", theme: "Objetos"}, {word: "Pente", theme: "Objetos"}, {word: "Pilha", theme: "Objetos"}, {word: "Quadro", theme: "Objetos"}, {word: "Rede", theme: "Objetos"}, {word: "Saco", theme: "Objetos"}, {word: "Suporte", theme: "Objetos"},
 //{word: "Tábua", theme: "Objetos"}, {word: "Tigela", theme: "Objetos"}, {word: "Trilho", theme: "Objetos"}, {word: "Válvula", theme: "Objetos"}, {word: "Vidro", theme: "Objetos"}, {word: "Vitrine", theme: "Objetos"}, {word: "Balde", theme: "Objetos"}, {word: "Broca", theme: "Objetos"}, {word: "Rolo", theme: "Objetos"}, {word: "Seringa", theme: "{word: "Arca", theme: "Objetos"}, {word: "Barril", theme: "Objetos"}, {word: "Bastão", theme: "Objetos"}, {word: "Bocal", theme: "Objetos"}, {word: "Botija", theme: "Objetos"}, {word: "Brinquedo", theme: "Objetos"}, {word: "Caldeira", theme: "Objetos"}, {word: "Capa", theme: "Objetos"}, {word: "Carretel", theme: "Objetos"}, {word: "Catraca", theme: "Objetos"},
-{word: "Cilindro", theme: "Objetos"}, {word: "Conector", theme: "Objetos"}, {word: "Correia", theme: "Objetos"}, {word: "Defletor", theme: "Objetos"}, {word: "Dispenser", theme: "Objetos"}, {word: "Dobradiça", theme: "Objetos"}, {word: "Eixo", theme: "Objetos"}, {word: "Engrenagem", theme: "Objetos"}, {word: "Envelope", theme: "Objetos"}, {word: "Espelho", theme: "Objetos"},
-{word: "Filtro", theme: "Objetos"}, {word: "Flanela", theme: "Objetos"}, {word: "Grampo", theme: "Objetos"}, {word: "Guarda", theme: "Objetos"}, {word: "Haste", theme: "Objetos"}, {word: "Isolante", theme: "Objetos"}, {word: "Lacre", theme: "Objetos"}, {word: "Manivela", theme: "Objetos"}, {word: "Matriz", theme: "Objetos"}, {word: "Miolo", theme: "Objetos"},
-{word: "Painel", theme: "Objetos"}, {word: "Pedestal", theme: "Objetos"}, {word: "Pinça", theme: "Objetos"}, {word: "Placa", theme: "Objetos"}, {word: "Reservatório", theme: "Objetos"}, {word: "Retentor", theme: "Objetos"}, {word: "Selo", theme: "Objetos"}, {word: "Tambor", theme: "Objetos"}, {word: "Vedante", theme: "Objetos"}, {word: "Visor", theme: "Objetos"},                  
+//{word: "Cilindro", theme: "Objetos"}, {word: "Conector", theme: "Objetos"}, {word: "Correia", theme: "Objetos"}, {word: "Defletor", theme: "Objetos"}, {word: "Dispenser", theme: "Objetos"}, {word: "Dobradiça", theme: "Objetos"}, {word: "Eixo", theme: "Objetos"}, {word: "Engrenagem", theme: "Objetos"}, {word: "Envelope", theme: "Objetos"}, {word: "Espelho", theme: "Objetos"},
+//{word: "Filtro", theme: "Objetos"}, {word: "Flanela", theme: "Objetos"}, {word: "Grampo", theme: "Objetos"}, {word: "Guarda", theme: "Objetos"}, {word: "Haste", theme: "Objetos"}, {word: "Isolante", theme: "Objetos"}, {word: "Lacre", theme: "Objetos"}, {word: "Manivela", theme: "Objetos"}, {word: "Matriz", theme: "Objetos"}, {word: "Miolo", theme: "Objetos"},
+//{word: "Painel", theme: "Objetos"}, {word: "Pedestal", theme: "Objetos"}, {word: "Pinça", theme: "Objetos"}, {word: "Placa", theme: "Objetos"}, {word: "Reservatório", theme: "Objetos"}, {word: "Retentor", theme: "Objetos"}, {word: "Selo", theme: "Objetos"}, {word: "Tambor", theme: "Objetos"}, {word: "Vedante", theme: "Objetos"}, {word: "Visor", theme: "Objetos"},                  
+                        {word: "Cadeira", theme: "Objetos"},
+{word: "Mesa", theme: "Objetos"},
+{word: "Sofa", theme: "Objetos"},
+{word: "Cama", theme: "Objetos"},
+{word: "Armario", theme: "Objetos"},
+{word: "Estante", theme: "Objetos"},
+{word: "Comoda", theme: "Objetos"},
+{word: "Criado", theme: "Objetos"},
+{word: "Luminaria", theme: "Objetos"},
+{word: "Abajur", theme: "Objetos"},
+{word: "Tapete", theme: "Objetos"},
+{word: "Cortina", theme: "Objetos"},
+{word: "Espelho", theme: "Objetos"},
+{word: "Quadro", theme: "Objetos"},
+{word: "Relogio", theme: "Objetos"},
+{word: "Televisao", theme: "Objetos"},
+{word: "Celular", theme: "Objetos"},
+{word: "Computador", theme: "Objetos"},
+{word: "Teclado", theme: "Objetos"},
+{word: "Mouse", theme: "Objetos"},
+{word: "Geladeira", theme: "Objetos"},
+{word: "Fogao", theme: "Objetos"},
+{word: "Microondas", theme: "Objetos"},
+{word: "Panela", theme: "Objetos"},
+{word: "Frigideira", theme: "Objetos"},
+{word: "Prato", theme: "Objetos"},
+{word: "Copo", theme: "Objetos"},
+{word: "Caneca", theme: "Objetos"},
+{word: "Garfo", theme: "Objetos"},
+{word: "Faca", theme: "Objetos"},
+{word: "Colher", theme: "Objetos"},
+{word: "Liquidificador", theme: "Objetos"},
+{word: "Cafeteira", theme: "Objetos"},
+{word: "Vassoura", theme: "Objetos"},
+{word: "Rodo", theme: "Objetos"},
+{word: "Balde", theme: "Objetos"},
+{word: "Esponja", theme: "Objetos"},
+{word: "Toalha", theme: "Objetos"},
+{word: "Travesseiro", theme: "Objetos"},
+{word: "Cobertor", theme: "Objetos"},
+{word: "Ventilador", theme: "Objetos"},
+{word: "Arcondicionado", theme: "Objetos"},
+{word: "Tomada", theme: "Objetos"},
+{word: "Interruptor", theme: "Objetos"},
+{word: "Cabo", theme: "Objetos"},
+{word: "Carregador", theme: "Objetos"},
+{word: "Lanterna", theme: "Objetos"},
+{word: "Chave", theme: "Objetos"},
+{word: "Fechadura", theme: "Objetos"},
+{word: "Porta", theme: "Objetos"},
+{word: "Janela", theme: "Objetos"},
+{word: "Lixeira", theme: "Objetos"},
+                        
                         // Profissões
             {word: "Médico", theme: "Profissões"}, {word: "Professor", theme: "Profissões"}, {word: "Engenheiro", theme: "Profissões"}, {word: "Advogado", theme: "Profissões"}, {word: "Jornalista", theme: "Profissões"}, 
 {word: "Programador", theme: "Profissões"}, {word: "Designer", theme: "Profissões"}, {word: "Arquiteto", theme: "Profissões"}, {word: "Cozinheiro", theme: "Profissões"}, {word: "Bombeiro", theme: "Profissões"}, 
@@ -248,63 +301,6 @@
             
             // Ações (Verbos)
             //{word: "Correr", theme: "Ações"}, {word: "Pular", theme: "Ações"}, {word: "Nadar", theme: "Ações"}, {word: "Voar", theme: "Ações"}, {word: "Dormir", theme: "Ações"}, {word: "Acordar", theme: "Ações"}, {word: "Comer", theme: "Ações"}, {word: "Beber", theme: "Ações"}, {word: "Falar", theme: "Ações"}, {word: "Ouvir", theme: "Ações"}, {word: "Ver", theme: "Ações"}, {word: "Cheirar", theme: "Ações"}, {word: "Tocar", theme: "Ações"}, {word: "Sentir", theme: "Ações"}, {word: "Pensar", theme: "Ações"}, {word: "Escrever", theme: "Ações"}, {word: "Ler", theme: "Ações"}, {word: "Desenhar", theme: "Ações"}, {word: "Pintar", theme: "Ações"}, {word: "Cantar", theme: "Ações"}, {word: "Dançar", theme: "Ações"}, {word: "Jogar", theme: "Ações"}, {word: "Trabalhar", theme: "Ações"}, {word: "Estudar", theme: "Ações"}, {word: "Viajar", theme: "Ações"}, {word: "Cozinhar", theme: "Ações"}, {word: "Limpar", theme: "Ações"}, {word: "Construir", theme: "Ações"}, {word: "Destruir", theme: "Ações"}, {word: "Chorar", 
-{word: "Presente", theme: "Ações"},
-{word: "Arvore", theme: "Ações"},
-{word: "Neve", theme: "Ações"},
-{word: "Sino", theme: "Ações"},
-{word: "Luz", theme: "Ações"},
-{word: "Estrela", theme: "Ações"},
-{word: "Guirlanda", theme: "Ações"},
-{word: "Vela", theme: "Ações"},
-{word: "Ceia", theme: "Ações"},
-{word: "Festa", theme: "Ações"},
-{word: "Noite", theme: "Ações"},
-{word: "Paz", theme: "Ações"},
-{word: "Amor", theme: "Ações"},
-{word: "Alegria", theme: "Ações"},
-{word: "Esperanca", theme: "Ações"},
-{word: "Uniao", theme: "Ações"},
-{word: "Familia", theme: "Ações"},
-{word: "Mesa", theme: "Ações"},
-{word: "Doce", theme: "Ações"},
-{word: "Bolo", theme: "Ações"},
-{word: "Rabanada", theme: "Ações"},
-{word: "Panetone", theme: "Ações"},
-{word: "Vinho", theme: "Ações"},
-{word: "Brinde", theme: "Ações"},
-{word: "Abraco", theme: "Ações"},
-{word: "Sorriso", theme: "Ações"},
-{word: "Cancao", theme: "Ações"},
-{word: "Cartao", theme: "Ações"},
-{word: "Mensagem", theme: "Ações"},
-{word: "Laco", theme: "Ações"},
-{word: "Papel", theme: "Ações"},
-{word: "Caixa", theme: "Ações"},
-{word: "Enfeite", theme: "Ações"},
-{word: "Bola", theme: "Ações"},
-{word: "Dourado", theme: "Ações"},
-{word: "Vermelho", theme: "Ações"},
-{word: "Verde", theme: "Ações"},
-{word: "Branco", theme: "Ações"},
-{word: "Prata", theme: "Ações"},
-{word: "Frio", theme: "Ações"},
-{word: "Inverno", theme: "Ações"},
-{word: "Aconchego", theme: "Ações"},
-{word: "Calor", theme: "Ações"},
-{word: "Tradicao", theme: "Ações"},
-{word: "Fe", theme: "Ações"},
-{word: "Lembranca", theme: "Ações"},
-{word: "Surpresa", theme: "Ações"},
-{word: "Carinho", theme: "Ações"},
-{word: "Bondade", theme: "Ações"},
-{word: "Generosidade", theme: "Ações"},
-{word: "Solidariedade", theme: "Ações"},
-{word: "Renovacao", theme: "Ações"},
-{word: "Magia", theme: "Ações"},
-{word: "Encanto", theme: "Ações"},
-{word: "Desejo", theme: "Ações"},
-{word: "Gratidao", theme: "Ações"},
-{word: "Celebracao", theme: "Ações"},
             // Lugares
             {word: "Praia", theme: "Lugares"}, {word: "Montanha", theme: "Lugares"}, {word: "Floresta", theme: "Lugares"}, {word: "Deserto", theme: "Lugares"}, {word: "Cidade", theme: "Lugares"}, 
 {word: "Biblioteca", theme: "Lugares"}, {word: "Museu", theme: "Lugares"}, {word: "Hospital", theme: "Lugares"}, {word: "Escola", theme: "Lugares"}, {word: "Parque", theme: "Lugares"}, 
