Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -275,59 +275,58 @@
 {word: "Porta", theme: "Objetos"},
 {word: "Janela", theme: "Objetos"},
 {word: "Lixeira", theme: "Objetos"},
-  {"word": "Árvore", "theme": "Objetos"},
-  {"word": "Presente", "theme": "Objetos"},
-  {"word": "Bola", "theme": "Objetos"},
-  {"word": "Guirlanda", "theme": "Objetos"},
-  {"word": "Velas", "theme": "Objetos"},
-  {"word": "Sino", "theme": "Objetos"},
-  {"word": "Estrela", "theme": "Objetos"},
-  {"word": "Boneco", "theme": "Objetos"},
-  {"word": "Luz", "theme": "Objetos"},
-  {"word": "Rena", "theme": "Objetos"},
-  {"word": "Meia", "theme": "Objetos"},
-  {"word": "Chaminé", "theme": "Objetos"},
-  {"word": "Bengala", "theme": "Objetos"},
-  {"word": "Pingente", "theme": "Objetos"},
-  {"word": "Laço", "theme": "Objetos"},
-  {"word": "Cartão", "theme": "Objetos"},
-  {"word": "Neve", "theme": "Objetos"},
-  {"word": "Estatueta", "theme": "Objetos"},
-  {"word": "Brilho", "theme": "Objetos"},
-  {"word": "Boneco-de-neve", "theme": "Objetos"},
-  {"word": "Fita", "theme": "Objetos"},
-  {"word": "Coroa", "theme": "Objetos"},
-  {"word": "Enfeite", "theme": "Objetos"},
-  {"word": "Rastro", "theme": "Objetos"},
-  {"word": "Castiçal", "theme": "Objetos"},
-  {"word": "Biscoito", "theme": "Objetos"},
-  {"word": "Treno", "theme": "Objetos"},
-  {"word": "Guizo", "theme": "Objetos"},
-  {"word": "Lareira", "theme": "Objetos"},
-  {"word": "Estampa", "theme": "Objetos"},
-  {"word": "Sacola", "theme": "Objetos"},
-  {"word": "Tapete", "theme": "Objetos"},
-  {"word": "Chaveiro", "theme": "Objetos"},
-  {"word": "Vela", "theme": "Objetos"},
-  {"word": "Caminho", "theme": "Objetos"},
-  {"word": "Pote", "theme": "Objetos"},
-  {"word": "Trilho", "theme": "Objetos"},
-  {"word": "Fogueira", "theme": "Objetos"},
-  {"word": "Cartola", "theme": "Objetos"},
-  {"word": "Coroa-de-natal", "theme": "Objetos"},
-  {"word": "Anjo", "theme": "Objetos"},
-  {"word": "Bola-de-neve", "theme": "Objetos"},
-  {"word": "Estrela-polar", "theme": "Objetos"},
-  {"word": "Gorro", "theme": "Objetos"},
-  {"word": "Fagulha", "theme": "Objetos"},
-  {"word": "Lanterna", "theme": "Objetos"},
-  {"word": "Cenário", "theme": "Objetos"},
-  {"word": "Árvore-de-natal", "theme": "Objetos"},
-  {"word": "Pinheiro", "theme": "Objetos"},
-  {"word": "Boneco-papai-noel", "theme": "Objetos"},
-  {"word": "Guirlanda-pendurar", "theme": "Objetos"},
-  {"word": "Estrela-topo", "theme": "Objetos"},
-                        
+    {word: "Árvore", theme: "Objetos"},
+{word: "Presente", theme: "Objetos"},
+{word: "Bola", theme: "Objetos"},
+{word: "Guirlanda", theme: "Objetos"},
+{word: "Velas", theme: "Objetos"},
+{word: "Sino", theme: "Objetos"},
+{word: "Estrela", theme: "Objetos"},
+{word: "Boneco", theme: "Objetos"},
+{word: "Luz", theme: "Objetos"},
+{word: "Rena", theme: "Objetos"},
+{word: "Meia", theme: "Objetos"},
+{word: "Chaminé", theme: "Objetos"},
+{word: "Bengala", theme: "Objetos"},
+{word: "Pingente", theme: "Objetos"},
+{word: "Laço", theme: "Objetos"},
+{word: "Cartão", theme: "Objetos"},
+{word: "Neve", theme: "Objetos"},
+{word: "Estatueta", theme: "Objetos"},
+{word: "Brilho", theme: "Objetos"},
+{word: "Boneco-de-neve", theme: "Objetos"},
+{word: "Fita", theme: "Objetos"},
+{word: "Coroa", theme: "Objetos"},
+{word: "Enfeite", theme: "Objetos"},
+{word: "Rastro", theme: "Objetos"},
+{word: "Castiçal", theme: "Objetos"},
+{word: "Biscoito", theme: "Objetos"},
+{word: "Treno", theme: "Objetos"},
+{word: "Guizo", theme: "Objetos"},
+{word: "Lareira", theme: "Objetos"},
+{word: "Estampa", theme: "Objetos"},
+{word: "Sacola", theme: "Objetos"},
+{word: "Tapete", theme: "Objetos"},
+{word: "Chaveiro", theme: "Objetos"},
+{word: "Vela", theme: "Objetos"},
+{word: "Caminho", theme: "Objetos"},
+{word: "Pote", theme: "Objetos"},
+{word: "Trilho", theme: "Objetos"},
+{word: "Fogueira", theme: "Objetos"},
+{word: "Cartola", theme: "Objetos"},
+{word: "Coroa-de-natal", theme: "Objetos"},
+{word: "Anjo", theme: "Objetos"},
+{word: "Bola-de-neve", theme: "Objetos"},
+{word: "Estrela-polar", theme: "Objetos"},
+{word: "Gorro", theme: "Objetos"},
+{word: "Fagulha", theme: "Objetos"},
+{word: "Lanterna", theme: "Objetos"},
+{word: "Cenário", theme: "Objetos"},
+{word: "Árvore-de-natal", theme: "Objetos"},
+{word: "Pinheiro", theme: "Objetos"},
+{word: "Boneco-papai-noel", theme: "Objetos"},
+{word: "Guirlanda-pendurar", theme: "Objetos"},
+{word: "Estrela-topo", theme: "Objetos"},
                         // Profissões
             {word: "Médico", theme: "Profissões"}, {word: "Professor", theme: "Profissões"}, {word: "Engenheiro", theme: "Profissões"}, {word: "Advogado", theme: "Profissões"}, {word: "Jornalista", theme: "Profissões"}, 
 {word: "Programador", theme: "Profissões"}, {word: "Designer", theme: "Profissões"}, {word: "Arquiteto", theme: "Profissões"}, {word: "Cozinheiro", theme: "Profissões"}, {word: "Bombeiro", theme: "Profissões"}, 
